further css mod to fix contrast

--- a/style.css
+++ b/style.css
@@ -1409,6 +1409,7 @@ h4 {
     .aboutme-textbox h2 {
         margin: 0 3%;
         font-size: 22px;
+        color: rebeccapurple;
     } 
     
     .aboutme-textbox p {
@@ -1457,7 +1458,7 @@ h4 {
     }
 
     .cta-row h2 {
-        
+        color: rebeccapurple;
         line-height: 41px;
     }
 
@@ -1784,7 +1785,7 @@ h4 {
 
    #bloc-2-services p {
         font-size: 12px;
-        font-weight: bold;
+       
         margin: 3%;
         width: auto;
         color: #402738;
